# braintrust-sdk-python

./: .gitignore  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  generated_types.json  mise.toml  pyproject.toml
examples/autogen/: README.md  example.py  pyproject.toml
examples/dspy/: README.md  example.py  pyproject.toml
examples/langchain/: README.md  anthropic_prompt_cache.py  example.py  pyproject.toml
examples/llamaindex/: README.md  example.py  pyproject.toml
examples/otel/: README.md  basic_otel_example.py  bt-otel-context.py  filtered_otel_example.py  pyproject.toml
examples/strands/: README.md  example.py  pyproject.toml
integrations/langchain-py/: Makefile  README.md  pyproject.toml
integrations/langchain-py/src/braintrust_langchain/: __init__.py  callbacks.py  context.py
integrations/langchain-py/src/tests/: conftest.py  test_callbacks.py  test_compat.py
py/: AGENTS.md  CLAUDE.md  Makefile  README.md  noxfile.py  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-optional.txt  setup.py
py/benchmarks/: __init__.py  __main__.py  _utils.py  fixtures.py  perf.py
py/benchmarks/benches/: __init__.py  bench_bt_json.py  bench_id_gen.py  bench_merge_dicts.py  bench_merge_row_batch.py  bench_span_components.py  bench_span_lifecycle.py
py/examples/: anthropic_async.py  anthropic_sync.py  auto_instrument.py  openai_example.py  pydantic_ai_example.py
py/examples/adk/: auto.py  manual_patching.py
py/examples/agno/: async_simple_agent_stream.py  async_team_agent.py  simple_agent.py  simple_agent_stream.py  team_agent.py
py/examples/dspy/: example.py
py/examples/otel/: basic_otel_example.py  distributed-tracing.py  filtered_otel_example.py  otel_eval.py
py/scripts/: bump-livekit-server.py  check-session-weights.py  check-stale-cassettes.py  determine-dependency-update-labels.py  generate_types.py  nox-matrix.py  session-weights.json  sync-pytest-pin.py  template-version.py  test-publish.py  update-matrix-latest.py  validate-release.py
py/src/braintrust/: __init__.py  _generated_types.py  auto.py  bt_json.py  conftest.py  context.py  dataset_pipeline.py  env.py  framework.py  framework2.py  generated_types.py  git_fields.py  gitutil.py  id_gen.py  logger.py  merge_row_batch.py  oai.py  object.py  parameters.py  prompt.py  propagation.py  queue.py  sandbox.py  score.py  serializable_data_class.py  span_cache.py  span_identifier_v4.py  span_types.py  test_bt_json.py  test_context.py  test_env.py  test_framework.py  test_framework2.py  test_helpers.py  test_id_gen.py  test_logger.py  test_otel.py  test_parameters.py  test_propagation.py  test_pydantic_parameters.py  (+12 more)
py/src/braintrust/btx/: __init__.py  conftest.py  span_fetcher.py  span_validator.py  spec_executor.py  spec_loader.py  test_btx.py
py/src/braintrust/cassettes/: test_classifier_spans_are_logged.yaml  test_register_sandbox_single_evaluator.yaml  test_register_sandbox_with_metadata_and_description.yaml
py/src/braintrust/cli/: eval.py  push.py  test_push.py  test_push_evaluator.py
py/src/braintrust/cli/install/: __init__.py  api.py  bump_versions.py  logs.py  redshift.py  run_migrations.py
py/src/braintrust/contrib/temporal/: __init__.py  test_temporal.py
py/src/braintrust/devserver/: auth.py  cors.py  eval_hooks.py  schemas.py  server.py  test_cors.py  test_server_integration.py
py/src/braintrust/functions/: invoke.py  stream.py  test_invoke.py
py/src/braintrust/functions/cassettes/: test_invoke_encodes_body_as_utf8_bytes.yaml
py/src/braintrust/integrations/: __init__.py  base.py  conftest.py  test_utils.py  test_versioning.py  utils.py  versioning.py
py/src/braintrust/integrations/adk/: __init__.py  integration.py  patchers.py  test_adk.py  test_adk_mcp_tool.py  tracing.py
py/src/braintrust/integrations/agentscope/: __init__.py  integration.py  patchers.py  test_agentscope.py  tracing.py
py/src/braintrust/integrations/agno/: __init__.py  _test_agno_helpers.py  integration.py  patchers.py  test_agno.py  test_workflow.py  tracing.py
py/src/braintrust/integrations/anthropic/: __init__.py  _utils.py  integration.py  patchers.py  test_anthropic.py  tracing.py
py/src/braintrust/integrations/auto_test_scripts/: test_auto_adk.py  test_auto_agentscope.py  test_auto_agno.py  test_auto_anthropic.py  test_auto_anthropic_patch_config.py  test_auto_autogen.py  test_auto_bedrock_runtime.py  test_auto_boto3_sdk.py  test_auto_claude_agent_sdk.py  test_auto_cohere.py  test_auto_crewai.py  test_auto_dspy.py  test_auto_google_genai.py  test_auto_huggingface_hub.py  test_auto_instructor.py  test_auto_langchain.py  test_auto_litellm.py  test_auto_livekit_agents.py  test_auto_mistral.py  test_auto_openai.py  test_auto_openai_agents.py  test_auto_openrouter.py  test_auto_pydantic_ai.py  test_auto_temporal.py  test_patch_litellm_aresponses.py  test_patch_litellm_responses.py
py/src/braintrust/integrations/autogen/: __init__.py  integration.py  patchers.py  test_autogen.py  tracing.py
py/src/braintrust/integrations/bedrock_runtime/: __init__.py  integration.py  patchers.py  test_bedrock_runtime.py  tracing.py
py/src/braintrust/integrations/boto3/: __init__.py  patchers.py  (+3 more)
py/src/braintrust/otel/: __init__.py  context.py  test_distributed_tracing.py  test_otel_bt_integration.py
py/src/braintrust/prompt_cache/: disk_cache.py  lru_cache.py  parameters_cache.py  prompt_cache.py
py/src/braintrust/type_tests/: pyrightconfig.json  test_autoevals_scorers.py  test_eval_generics.py  test_metadata_types.py  test_parameters_schema.py  test_public_exports.py
py/src/braintrust/types/: __init__.py  _eval.py
py/src/braintrust/wrappers/: adk.py  agno.py  anthropic.py  claude_agent_sdk.py  dspy.py  google_genai.py  langchain.py  langsmith_wrapper.py  litellm.py  openai.py  pydantic_ai.py  test_agno.py  test_anthropic.py  test_dspy.py  test_google_genai.py  test_langsmith_wrapper.py  test_litellm.py  test_oai_attachments.py  test_openai.py  test_pydantic_ai_integration.py  test_pydantic_ai_wrap_openai.py  test_utils.py  threads.py
(+1042 files in other folders)
