[project]
name = "braintrust-autogen-example"
version = "0.1.0"
description = "AutoGen AssistantAgent traced with Braintrust"
requires-python = ">=3.10"
dependencies = [
    "braintrust",
    "autogen-agentchat",
    "autogen-ext[openai]",
]

[tool.uv.sources]
braintrust = { path = "../../py", editable = true }
