[project]
name = "braintrust-llamaindex-example"
version = "0.1.0"
description = "LlamaIndex query traced with Braintrust"
requires-python = ">=3.10"
dependencies = [
    "braintrust",
    "llama-index",
    "llama-index-llms-openai",
]

[tool.uv.sources]
braintrust = { path = "../../py", editable = true }
